--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
-host-address: 10.14.5.160
+host-address: 192.168.128.202
 registry-port: 8081
-team-name: placeholder
+team-name: ettMinutt
 
 kafka:
   port: 29092
   immigrant:
     consumer:
-      topic: itverket-immigration-0
+      topic: itverket-immigration-3
       ip-address: ${host-address}
       port: ${kafka.port}
       group-id: ${team-name}
